# RAG

./: README.md  pyproject.toml  rag.py
data/: resa.txt
